syntax = "proto3";
package proto;
option go_package = ".;proto";
import "consts.proto";
import "struct.proto";

message Request{
    RequestCode                     requestCode                     = 1;
    PlayerEnterGameRequest          playerEnterGameRequest          = 2;
    PlayerQuitGameRequest           playerQuitGameRequest           = 3;
    HeroPositionReportRequest       heroPositionReportRequest       = 4;
    HeroMovementChangeRequest       heroMovementChangeRequest       = 5;
    HeroSwordAttackRequest          heroSwordAttackRequest          = 6;
    HeroBulletLaunchRequest         heroBulletLaunchRequest         = 7;
    HeroGetPropRequest              heroGetPropRequest              = 8;
    HeroBulletColliderHeroRequest   heroBulletColliderHeroRequest   = 9;
    PlayerHeartBeatRequest          playerHeartBeatRequest          = 10;
}

message PlayerEnterGameRequest{
    int32 playerId = 1;
    int32 gameRoomId = 2;
}

message PlayerQuitGameRequest{
    int32 heroId = 1;
    int32 playerId = 2;
}

message HeroPositionReportRequest{
    int32 heroId = 1;
    HeroMovementType heroMovementType = 2;
    Vector2 position = 3;
    int64  time = 4;
}

message HeroMovementChangeRequest{
    int32 heroId = 1;
    HeroMovementType heroMovementType = 2;
    Vector2 position = 3;
    int64  time = 4;
}

message HeroBulletLaunchRequest{
    int32          heroId = 1;          //保留,用于校验英雄发射子弹合法性
    Vector2        position = 2;
    Vector2        direction = 3;
    int32          bulletIdByHero = 4;
    int64          launchTime = 5;
}

message HeroSwordAttackRequest{
    int32          heroId = 1;
    Vector2        position = 2;
    Vector2        direction = 3;
    int64          attackTime = 4;
}

message HeroGetPropRequest{
    int32       heroId = 1;
    int32       propId = 2;
}

message HeroBulletColliderHeroRequest{
    //int32       heroId          = 1;
    //int32       bulletId        = 2;
    int64       bulletId        = 1;
    int32       colliderHeroId  = 2;
    int64       colliderTime    = 3;
}

message PlayerHeartBeatRequest{
    int32       playerId        = 1;
    int64       clientSendTime  = 2;
}

